# NS-RobotArm

./: ODrive_setup.sh  README.md  controller_old.cpp  jetson_setup.txt  main.cpp  nsra_control_step.h  output_data_0.csv  output_data_1.csv
.catkin_tools/profiles/default/: config.yaml
NSRA_URDF_Short/Robot/: Robot.urdf
NSRA_URDF_Short/Robot/launch/: Robot_control.launch  Robot_controller.yaml  Robot_gazebo.launch
NSRA_URDF_Short/Robot/mm_stl/: Component7_1.stl  Component8_1.stl
PIO/NSRA_control/: platformio.ini
PIO/NSRA_control/src/: controller.cpp  main.cpp  main2.cpp
arduino/CANMaster/: CANMaster.ino  Gripper.ino
jetson-inference/: camera_callibration.py  detectnet.py
odrive_data/data2/: data_axis1_2.csv  data_axis2_2.csv  data_axis3_2.csv  data_axis4_2.csv  data_axis5_2.csv  data_axis6_2.csv
robot_ws/.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
robot_ws/nsra_urdf/: CMakeLists.txt  package.xml
robot_ws/src/nsra_computer_vision/: CMakeLists.txt  camera1_conf.xml  camera2.xml  camera2_conf.xml  default.xml  package.xml
robot_ws/src/nsra_computer_vision/launch/: launch.txt
robot_ws/src/nsra_computer_vision/src/: blob_detection  blob_detection_left  blob_detection_right  bottle_detection  bottle_detection.cpp  calib_stereo.cpp  camera_callibration  cbc_detection  cbc_detection_left  cbc_detection_right  detectnet.py  http_test  main.cpp  multiprocessing_test  nsra_bottle_detection.cpp  nsra_gripper  plot_3d_points  read_images.cpp  single_cam_callibration.cpp  stereo_callibration  undistort_rectify.cpp
robot_ws/src/nsra_computer_vision/src/2d_bottle_detection/: 2d_bottle_detection
robot_ws/src/nsra_computer_vision/src/bottle_detection_v1/: front_view_tracking  nsra_bd_front_view  nsra_bd_object_detection  nsra_bd_top_view  object_detection.py  top_view_tracking
robot_ws/src/nsra_computer_vision/src/calibration/: calib_intrinsics  calib_stereo.cpp  single_cam_callibration.cpp  undistort_rectify.cpp
robot_ws/src/nsra_computer_vision/src/corner_detection/: cbc_detection_left  cbc_detection_right
robot_ws/src/nsra_computer_vision/src/deprecated/: calib_intrinsic.cpp  single_cam_callibration.cpp
robot_ws/src/nsra_computer_vision/src/jetson_inference/: detectnet.py
robot_ws/src/nsra_computer_vision/srv/: 2d_coords.srv
robot_ws/src/nsra_controller/: CMakeLists.txt
robot_ws/src/nsra_controller/nsra_control/: CMakeLists.txt
robot_ws/src/nsra_controller/nsra_control/config/: nsra_controllers.yaml
robot_ws/src/nsra_controller/nsra_control/launch/: nsra_hardware.launch
robot_ws/src/nsra_controller/nsra_control/src/: nsra_hw_interface.cpp
robot_ws/src/nsra_gxipy/: CMakeLists.txt  package.xml
robot_ws/src/nsra_moveit_config/config/: joint_limits.yaml  ros_controllers.yaml
robot_ws/src/nsra_moveit_config/launch/: nsra_rviz.launch
robot_ws/src/nsra_moveit_config_new/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  nsra.srdf  ros_controllers.yaml
robot_ws/src/nsra_moveit_config_new/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  nsra_moveit_controller_manager.launch.xml  ros_controllers.launch
robot_ws/src/nsra_moveit_config_new2/: .setup_assistant  CMakeLists.txt  package.xml
robot_ws/src/nsra_moveit_config_new2/config/: fake_controllers.yaml  joint_limits.yaml  nsra.srdf  ros_controllers.yaml
robot_ws/src/nsra_moveit_config_new2/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  nsra_moveit.launch  nsra_moveit_controller_manager.launch.xml  nsra_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robot_ws/src/nsra_moveit_interface/: CMakeLists.txt  package.xml
robot_ws/src/nsra_moveit_interface/src/: nsra_moveit_interface  pick_place.cpp
robot_ws/src/nsra_odrive_interface/: CMakeLists.txt
robot_ws/src/nsra_odrive_interface/msg/: obj_det.msg
robot_ws/src/nsra_odrive_interface/src/: data_collection  driver_node  odrive1
robot_ws/src/nsra_odrive_interface/srv/: bd_coords.srv
robot_ws/src/nsra_pyNDI/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/nsra_python_interface/: CMakeLists.txt  package.xml
robot_ws/src/nsra_python_interface/src/: python_interface_test
robot_ws/src/nsra_robot_vision/: CMakeLists.txt
robot_ws/src/nsra_robot_vision/config/: cam_stereo.yml  camera1.xml  left_conf.xml  left_data.xml  right_conf.xml  right_data.xml
robot_ws/src/nsra_robot_vision/include/: Processing.NDI.Lib.h
robot_ws/src/nsra_robot_vision/launch/: launch.txt
robot_ws/src/nsra_robot_vision/src/: SimpleSourceViewer  nsra_bottle_detection.cpp  nsra_gripper  stereo_camera
robot_ws/src/nsra_robot_vision/src/bottle_detection_v1/: nsra_bd_front_view  nsra_bd_top_view
robot_ws/src/nsra_robot_vision/src/bottle_detection_v2/: nsra_color_configuration  nsra_stereo_bottle_detection
robot_ws/src/nsra_robot_vision/src/calibration/: calib_intrinsics  calib_stereo.cpp
robot_ws/src/nsra_robot_vision/src/camera_callibration/: calib_ingest  calib_stereo.cpp
robot_ws/src/nsra_robot_vision/src/corner_detection/: cbc_detection_right
robot_ws/src/nsra_robot_vision/src/deprecated/: NDI_source_viewer  single_cam_callibration.cpp
robot_ws/src/nsra_robot_vision/src/tests/: stereo_camera  stereo_camera_gx  stereo_depth_map
robot_ws/src/nsra_robot_vision/srv/: stereo_camera_coords.srv
robot_ws/src/nsra_support/urdf/: nsra.xacro  robot.xacro
robot_ws/src/nsra_urdf/urdf/: robot.xacro
ros_lib/moveit_msgs/: GetCartesianPath.h  GetStateValidity.h
ros_lib/nsra_controller/: driver.h  feedback.h  requested_state.h  velocity.h
ros_lib/nsra_odrive_interface/: bd_coords.h  bd_robot_coords.h  driver.h  feedback.h  lr_coords.h  nsra_control_step.h  obj_det.h  requested_state.h  velocity.h
ros_lib/nsra_robot_vision/: coords.h
(+6 files in other folders)
